--- a/java/.vscode/settings.json
+++ b/java/.vscode/settings.json
@@ -1,24 +1,20 @@
 {
-  // "editor.fontLigatures": false,
-  // "editor.fontSize": 18,
-  // "editor.suggestFontSize": 14,
-  // "terminal.integrated.fontSize": 16,
+  "editor.fontLigatures": true,
+  // "editor.suggest.showDeprecated": false,
+  // "editor.suggest.showSnippets": false,
   "explorer.autoReveal": false,
-  "extensions.ignoreRecommendations": true,
   "git.countBadge": "off",
   "git.decorations.enabled": false,
-  "java.checkstyle.configuration": "../checks.xml",
+  "java.checkstyle.configuration": "checks.xml",
   "java.checkstyle.version": "10.4",
   "java.debug.settings.jdwp.async": "on",
   "java.inlayHints.parameterNames.enabled": "none",
+  // "window.zoomLevel": 1.5,
   "workbench.colorTheme": "GitHub Dark Colorblind (Beta)",
-  "gradle.nestedProjects": true,
-  "workbench.preferredDarkColorTheme": "GitHub Dark Colorblind (Beta)",
-  "workbench.preferredLightColorTheme": "GitHub Light Colorblind (Beta)",
   "files.exclude": {
     "{**/gradle*,**/build-logic}": true,
     "{**/resources,**/test}": true,
     "{**/checks.xml}": true,
-    "**/.git*": true,
+    "**/.git*": true
   }
 }
